Добавлено описание http-методов для Swagger документации
